--- a/Vue/单文件组件.md
+++ b/Vue/单文件组件.md
@@ -2,4 +2,19 @@
 
 
 
-* js引用
+* 模块、库使用
+
+1. 下载
+
+   ```shell
+   npm install axios
+   #缩写
+   npm i axios
+   ```
+
+2. 导入
+
+   ```javascript
+   import axios from 'axios'
+   ```
+
