[+]组件封装及使用

--- a/Vue/单文件组件.md
+++ b/Vue/单文件组件.md
@@ -18,3 +18,21 @@
    import axios from 'axios'
    ```
 
++ 组件封装使用
+
+```javascript
+<template>
+  <div>
+      <player></player>
+  </div>
+</template>
+
+import player from "./components/player.vue"
+export default {
+    //注册
+    components:{
+        player//标准写法player:player
+    }
+}
+```
+
