--- a/Vue/单文件组件.md
+++ b/Vue/单文件组件.md
@@ -175,4 +175,115 @@ cnpm install -g @vue/cli
    Vue.use(ElementUi)
    ```
 
-   
+   #### 3.例子 分页器
+
+   + 页面使用
+
+	   ```html
+	   <!-- 分页器 
+	   total:总数
+	   current-page:当前页码
+	   page-size：每页数量
+	   handleCurrentChange：页码改变事件
+	   -->
+	   <el-pagination
+					  @current-change="handleCurrentChange"
+					  background
+					  layout="prev, pager, next"
+					  :total="total"
+					  :current-page="page"
+					  :page-size="10"
+					  >
+	   </el-pagination>
+	   ```
+
+   + 分页调用参数
+
+     ```javascript
+     params:{
+         limit:10,
+         //起始值 计算公式 （page-1)*pageSize
+         offset:(this.page-1)*10
+     }
+     ```
+
+   + 页码改变事件
+
+     ```javascript
+     //页码改变事件
+     handleCurrentChange(val) {
+         //console.log(`当前页: ${val}`);
+         this.page=val;  //设置当前页
+         this.playListData(); //重新调数据
+     }
+     ```
+
+     
+
+#### 父子组件通信props&emit
+
++ props在子组件中设置，作用是定义允许父组件传入的值
+
+  ```html
+  //子组件 使用
+  //props
+  //props:['queryStr'],
+  props: {
+  	'queryStr': String
+  },
+  data() {
+      return {
+      	query:this.queryStr
+      }
+  }
+  
+  //父组件 传递
+  <top v-bind:queryStr="'于文文'"/>
+  ```
+
++ emit在子组件中触发，通过他可以触发父组件中注册的事件，甚至传递参数
+
+  ```html
+  //子组件
+  //参数1 事件名 参数2 值
+  this.$emit('queryChange',this.query)
+  
+  //父组件
+  <top v-bind:queryStr="'于文文'" @queryChange="change"/>
+  methods:{
+      change(val){
+      	this.$message(`您搜索了${val}`)
+      }
+  }
+  ```
+
+  
+
+#### Vue路由this.$router.push转跳同一个页面不刷新
+
+```php+HTML
+<router-view :key="$route.fullPath"></router-view>
+```
+
+1. 不设置 router-view 的 key 属性
+   由于 Vue 会复用相同组件, 即 /page/1 => /page/2 或者 /page?id=1 => /page?id=2 这类链接跳转时, 将不在执行 created,mounted 之类的钩子, 这时候你需要在路由组件中, 添加 beforeRouteUpdate 钩子来执行相关方法拉去数据。
+   相关钩子加载顺序为：beforeRouteUpdate
+
+2. 设置 router-view 的 key 属性值为 $route.path
+
+   > 从 /page/1 => /page/2, 由于这两个路由的 $route.path 并不一样, 所以组件被强制不复用。
+   > 相关钩子加载顺序为：beforeRouteUpdate => created => mounted
+
+   > 从 /page?id=1 => /page?id=2, 由于这两个路由的 $route.path 一样, 所以和没设置key属性一样, 会复用组件。
+   > 相关钩子加载顺序为：beforeRouteUpdate
+
+3. 设置 router-view 的 key 属性值为 $route.fullPath
+
+   > 从 /page/1 => /page/2, 由于这两个路由的 $route.fullPath 并不一样, 所以组件被强制不复用。
+   > 相关钩子加载顺序为：beforeRouteUpdate => created => mounted
+
+   > 从 /page?id=1 => /page?id=2, 由于这两个路由的 $route.fullPath 并不一样, 所以组件被强制不复用。
+   > 相关钩子加载顺序为：beforeRouteUpdate => created => mounted
+
+个人理解：
+在<router-view :key='$route.fullPath'>中，通过绑定一个fullPath，可以识别当前页面路由的完整地址，当地址发生改变(包括参数改变)则重新渲染页面(例如动态路由参数的变化)
