--- a/好记性不如烂笔头.md
+++ b/好记性不如烂笔头.md
@@ -1,27 +1,27 @@
-1. spring默认也会读取resources/config下的配置文件
+[TOC]
 
-2. 在线课程模块图
+#### 1. spring默认也会读取resources/config下的配置文件
 
-   ![](C:\GitOut\typoranote\image\little\onlinecoursemodule.png)
+#### 2. 在线课程模块图
 
-3. domain 作用于service和mapper;
+![](C:\GitOut\typoranote\image\little\onlinecoursemodule.png)
 
-   dto作用于controller和service。
+#### 3. domain 作用于service和mapper;dto作用于controller和service。
 
-4. 在线课程后台请求 /admin用于控台类的接口。/web用于网站类的接口。接口设计中，用不同的请求前缀代表不同的入口，做接口隔离，方便做鉴权、统计、监控等。
+#### 4. 在线课程后台请求 /admin用于控台类的接口。/web用于网站类的接口。接口设计中，用不同的请求前缀代表不同的入口，做接口隔离，方便做鉴权、统计、监控等。
 
-5. Post请求有多种参数传递方式，通过header里的Content-Type来标识，常见的有两种
+1. Post请求有多种参数传递方式，通过header里的Content-Type来标识，常见的有两种
 
    > 表单的方式
    >
    > json(流)的方式 **后端使用@ResquestBody来接收**
 
-6. **面试** 为甚么不用自增id?
+2. **面试** 为甚么不用自增id?
    1. 自增id是连续的，容易被探测
    2. 需要+1次查询才能得到id的值
    3. 分布式存储中，id会出现重复
 
-7. **vue 数据绑定在实际开发中引发的问题及解决**
+3. **vue 数据绑定在实际开发中引发的问题及解决**
 
    列表修改数据，带数据到弹出窗，修改弹出窗数据实时同步至列表，关闭也不还原，解决如下，将数据拷贝至新的对象中。
 
@@ -29,10 +29,313 @@
    _this.chapter = $.extend({},chapter);
    ```
 
-8. 注解**@ControllerAdvice是Controller的增强器**，可以对Controller做统一处理。如异常处理，数据处理等。
+4. 注解**@ControllerAdvice是Controller的增强器**，可以对Controller做统一处理。如异常处理，数据处理等。
 
-9. 有时候接口不对外开放，或只跟第三方应用做对接，这时为了内部安全，**不应该把参数的校验规则暴露出去，所以要模糊返回信息**。
+5. 有时候接口不对外开放，或只跟第三方应用做对接，这时为了内部安全，**不应该把参数的校验规则暴露出去，所以要模糊返回信息**。
 
-10. 一个**日志跟踪号（日志流水号）**来标识一次请求。生产环境中，往往同时会打印多个请求的日志，通过“grep日志跟踪号“可以查找出一次请求的所以日志。
+6. 一个**日志跟踪号（日志流水号）**来标识一次请求。生产环境中，往往同时会打印多个请求的日志，通过“grep日志跟踪号“可以查找出一次请求的所以日志。
 
-11. **NODE_ENV（node environment）**:表示构建项目的当前环境 
+7. **NODE_ENV（node environment）**:表示构建项目的当前环境 
+
+8. 上传图片实时显示：
+
+     
+
+9. @Value 注入属性值
+
+   ```java
+   @Value("${file.domain}")
+   private string FILE_DOMAIN;
+   ```
+
+10. SpringBoot静态资源配置
+
+   ```java
+   @Configuration
+   public class SpringMvcConfig implements WebMvcConfigurer {
+       @Value("${file.path}")
+       private String FILE_PATH;
+       /**
+        * 静态资源
+        * @param registry
+        */
+       @Override
+       public void addResourceHandlers(ResourceHandlerRegistry registry) {
+           registry.addResourceHandler("/f/**").addResourceLocations("file:" + FILE_PATH);//所有带/f的资源都是静态资源访问的目录为FILE_PATH
+       }
+   }
+   ```
+
+
+15. springnboot 文件上传大小限制
+
+    ```properties
+    ## 单个文件最大默认1MB
+    spring.servlet.multipart.max-file-size=50MB
+    ## 一个请求最大默认10MB
+    spring.servlet.multipart.max-request-size=50MB
+    ```
+
+    
+
+16. 大文件上传分片
+
+    + 前端
+
+      ```vue
+      upload (param) {
+              let _this = this;
+              let shardIndex = param.shardIndex;
+              let shardTotal = param.shardTotal;
+              let shardSize = param.shardSize;
+              let fileShard = _this.getFileShard(shardIndex, shardSize);//
+              // 将图片转为base64进行传输
+              let fileReader = new FileReader();
+              Progress.show(parseInt((shardIndex - 1) * 100 / shardTotal));
+              fileReader.onload = function (e) {
+                let base64 = e.target.result;
+                param.shard = base64;
+                _this.$ajax.post(process.env.VUE_APP_SERVER + '/file/admin/' + _this.url, param).then((response) => {
+                  let resp = response.data;
+                  console.log("上传文件成功：", resp);
+                  Progress.show(parseInt(shardIndex * 100 / shardTotal));
+                  if (shardIndex < shardTotal) {
+                    // 上传下一个分片
+                    param.shardIndex = param.shardIndex + 1;
+                    _this.upload(param);
+                  } else {
+                    Progress.hide();
+                    _this.afterUpload(resp);
+                    $("#" + _this.inputId + "-input").val("");
+                    Toast.success("文件上传成功！");
+                  }
+                });
+              };
+              fileReader.readAsDataURL(fileShard);
+            },
+          getFileShard (shardIndex, shardSize) {//分片
+              let _this = this;
+              let file = _this.$refs.file.files[0];
+              let start = (shardIndex - 1) * shardSize;	//当前分片起始位置
+              let end = Math.min(file.size, start + shardSize); //当前分片结束位置
+              let fileShard = file.slice(start, end); //从文件中截取当前的分片数据
+              return fileShard;
+            },
+      ```
+
+      
+
+    + 后端
+
+      ```java
+      @RequestMapping("/upload")
+          public ResponseDto upload(@RequestBody FileDto fileDto) throws Exception {
+              LOG.info("上传文件开始");
+              String use = fileDto.getUse();
+              String key = fileDto.getKey();
+              String suffix = fileDto.getSuffix();
+              String shardBase64 = fileDto.getShard();r
+              MultipartFile shard = Base64ToMultipartFile.base64ToMultipart(shardBase64);//base64转file
+              FileUseEnum useEnum = FileUseEnum.getByCode(use);// 保存文件到本地
+              String dir = useEnum.name().toLowerCase();//如果文件夹不存在则创建
+              File fullDir = new File(FILE_PATH + dir);
+              if (!fullDir.exists()) {
+                  fullDir.mkdir();
+              }
+              String path = new StringBuffer(dir).append(File.separator).append(key).append(".").append(suffix).toString(); // course\6sfSqfOwzmik4A4icMYuUe.mp4
+              String localPath = new StringBuffer(path).append(".").append(fileDto.getShardIndex()).toString(); // course\6sfSqfOwzmik4A4icMYuUe.mp4.1
+              String fullPath = FILE_PATH + localPath;
+              File dest = new File(fullPath);
+              shard.transferTo(dest);
+              LOG.info(dest.getAbsolutePath());
+              LOG.info("保存文件记录开始");
+              fileDto.setPath(path);
+              fileService.save(fileDto);
+              ResponseDto responseDto = new ResponseDto();
+              fileDto.setPath(FILE_DOMAIN + path);
+              responseDto.setContent(fileDto);
+              if (fileDto.getShardIndex().equals(fileDto.getShardTotal())) {
+                  this.merge(fileDto);
+              }
+              return responseDto;
+          }
+      	/**文件合并**/
+          public void merge(FileDto fileDto) throws Exception {
+              LOG.info("合并分片开始");
+              String path = fileDto.getPath(); //http://127.0.0.1:9000/file/f/course\6sfSqfOwzmik4A4icMYuUe.mp4
+              path = path.replace(FILE_DOMAIN, ""); //course\6sfSqfOwzmik4A4icMYuUe.mp4
+              Integer shardTotal = fileDto.getShardTotal();
+              File newFile = new File(FILE_PATH + path);
+              FileOutputStream outputStream = new FileOutputStream(newFile, true);//文件追加写入
+              FileInputStream fileInputStream = null;//分片文件
+              byte[] byt = new byte[10 * 1024 * 1024];
+              int len;
+              try {
+                  for (int i = 0; i < shardTotal; i++) {
+                      // 读取第i个分片
+                      fileInputStream = new FileInputStream(new File(FILE_PATH + path + "." + (i + 1))); //  course\6sfSqfOwzmik4A4icMYuUe.mp4.1
+                      while ((len = fileInputStream.read(byt)) != -1) {
+                          outputStream.write(byt, 0, len);
+                      }
+                  }
+              } catch (IOException e) {
+                  LOG.error("分片合并异常", e);
+              } finally {
+                  try {
+                      if (fileInputStream != null) {
+                          fileInputStream.close();
+                      }
+                      outputStream.close();
+                      LOG.info("IO流关闭");
+                  } catch (Exception e) {
+                      LOG.error("IO流关闭", e);
+                  }
+              }
+              LOG.info("合并分片结束");
+              System.gc();//垃圾回收去掉文件占用
+              Thread.sleep(100);//线程睡眠100ms等垃圾回收结束
+              // 删除分片
+              LOG.info("删除分片开始");
+              for (int i = 0; i < shardTotal; i++) {
+                  String filePath = FILE_PATH + path + "." + (i + 1);
+                  File file = new File(filePath);
+                  boolean result = file.delete();
+                  LOG.info("删除{}，{}", filePath, result ? "成功" : "失败");
+              }
+              LOG.info("删除分片结束");
+          }
+      	/**文件上传检查 检查是否上传过 已上传的分片数**/
+          @GetMapping("/check/{key}")
+          public ResponseDto check(@PathVariable String key) throws Exception {
+              LOG.info("检查上传分片开始：{}", key);
+              ResponseDto responseDto = new ResponseDto();
+              FileDto fileDto = fileService.findByKey(key);
+              if (fileDto != null) {
+                  fileDto.setPath(FILE_DOMAIN + fileDto.getPath());
+              }
+              responseDto.setContent(fileDto);
+              return responseDto;
+          }
+      ```
+
+      
+
+    + 数据库
+
+      ```sql
+      -- 文件表设计
+      drop table if exists file;
+      create table file(
+          id char(8)not null default '' comment 'id',
+          path varchar(100) not null comment '相对路径',
+          name varchar(100) comment'文件名',
+          suffix varchar(10) comment '后缀',
+          size int comment'大小|字节B',
+          `use` char(1) comment '用途|枚举[FileUseEnum]: COURSE("C","讲师"), TEACHER("T","课程")',
+          created_at datetime(3) comment'创建时间',
+          updated_at datetime(3) comment'修改时间',
+          primary key(id),
+          unique key path_unique (path)
+      )engine=innodb default charset=utf8mb4 comment='文件';
+      
+      -- file表添分片添加字段
+      alter table file add column shard_index int comment '已上传分片';
+      alter table file add column shard_size int comment '分片大小|B';
+      alter table file add column shard_total int comment '分片总数';
+      alter table file add column `key` varchar(32) comment '文件标识';
+      alter table file add unique key key_unique(`key`);
+      ```
+
+    + 分片上传和极速妙传流程图
+
+      ![分片上传和极速秒传流程图](C:\GitOut\typoranote\image\分片上传.png)
+
+      ​																															 
+
+    17. MD5信息摘要算法，常用于密码加密传输与存储，会生成128位二进制数，每4个二进制可以转成1个16进制数字，结果是32个16进制数字。
+
+    18. 在线课程阿里云使用：
+        + 对象存储OSS（支持追加上传）
+        + 视频点播VoD（不支持追加上传）
+        
+    19. 抛出业务异常时，不打印堆栈信息，**一方面提高性能，另一方面是没有业务异常没必要看堆栈信息。**
+
+    20. MAC地址位数
+
+        > MAC地址的长度为48位(6个字节)，通常表示为12个16进制数。
+        >
+        > 如：00-16-EA-AE-3C-40就是一个MAC地址，其中前6位16进制数00-16-EA代表网络硬件制造商的编号，它由IEEE(电气与电子工程师协会)分配，而后6位16进制数AE-3C-40代表该制造商所制造的某个网络产品(如网卡)的系列号。
+
+    21. IP地址位数
+
+        > IPv4的地址也就是你说的这种192.168.10.1形式的地址，是用点分十进制表示的，一共32位（二进制），分为四段，所以啊，每段8位（二进制），但是由于二进制表示的IP地址不便于我们记忆，所以就把每段的8位二进制数转换为了相应的十进制数，就是我们所看到的：192.168.10.1。
+        >
+        > IPv6的地址长度为128位，采用十六进制表示。
+
+    22. 前端保存信息的方式
+        + h5的localStorage：关闭页面后，登录信息还在，适合一些内网使用的系统保存登录信息
+        + sessionStorage :刷新页面的时候信息不会丢失；关闭页面后信息自动清空，适合用来存储登录信息
+        + js的全局变量：刷新浏览器的时候，信息会丢失
+        + vue的store：刷新浏览器的时候，信息会丢失
+
+    23. 前端获取对象时，加上||{}，避免获取属性值时报错
+
+    24. vue每次请求sessionId不一致问题
+
+        ```vue
+        // 解决ajax请求对应的sessionId不一致问题
+        axios.defaults.withCredentials = true;
+        ```
+
+    25. redis应用
+        + session共享
+        + 缓存 （高查询，低修改的数据，适合使用缓存：权限树、课程分类树）
+
+    26. 单点登录（Single Sign On)，简称单点登录，核心**session共享**
+
+    27. 权限控制设计
+
+        RBAC模型：*RBAC*是基于角色的访问控制(Role-Based Access Control)在*RBAC*中,权限与角色相关联,用户通过成为适当角色的成员而得到这些角色的权限。
+
+        配置：
+
+        通过角色将用户和角色关联，角色和资源关联。
+
+        + 权限拦截对象：用户（user)
+
+        + 权限拦截的点：菜单、路由、接口、按钮（ACL:访问控制列表Access Control Lists)
+
+        + 角色（role)
+        + 角色用户（role-user)
+        + 角色权限（role-acl)
+
+        读取：
+
+        + 用户权限的读取，用户登录的时候，读取该用户的所有权限。
+
+        拦截：
+
+        + 用户操作业务时，进行权限拦截
+
+          前端界面：菜单，路由，按钮 hidden disable
+
+          后端接口：接口，gateway的过滤（<font color="red">所有前端的设计都是不安全的</font>）
+
+        权限初始化：
+
+        + 保留supperadmin账号用于用户授权
+
+        <font color="red">缓存</font>：（高查询，低修改的数据，适合使用缓存：权限树、课程分类树）
+
+        + 前端：
+          + session-storage存储缓存
+          + local-storage存储缓存，要配合缓存清除，管理端可以在菜单中添加清除分类缓存、清除资源缓存，点击时候清除相应缓存。
+
+        ​	
+
+    28. maven命令package、install、deploy的联系与区别
+
+        
+
+    29. Springboot项目部署war 原理
+
